# lazysh

./: LICENSE  cabal.project  lazysh.cabal
app/: Main.hs
src/: Shell.hs
src/Shell/: Parser.hs  Prompt.hs  Run.hs  Types.hs
test/: MyLibTest.hs
