cabal-version:      2.4
name:               lazysh
version:            0.1.0.0
synopsis:           Simple shell written in Haskell 
homepage:           https://github.com/jedimahdi/lazysh
bug-reports:        https://github.com/jedimahdi/lazysh/issues
license:            MIT
license-file:       LICENSE
author:             Mahdi Seyedan
maintainer:         jedimahdi <mahdi.se@yahoo.com>
category:           System

common common-options
  build-depends:       base
                     , text

  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
                       FlexibleInstances
                       MultiParamTypeClasses

  default-language:    Haskell2010


common exe-options
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

library
    import:           common-options
    exposed-modules:  Shell
                      Shell.Types
                      Shell.Parser
                      Shell.Prompt
                      Shell.Run
    build-depends:    process
                    , directory
                    , colour
                    , ansi-terminal
                    , megaparsec
                    , diagnose
    hs-source-dirs:   src

executable lazysh
    import:           exe-options
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base
                    , lazysh
    default-language: Haskell2010

test-suite lazysh-test
    import:           common-options, exe-options
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    lazysh
                    , hspec
                    , QuickCheck
                    , megaparsec
                    , diagnose
